--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,34 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
+
+stages:
+    - build
+    - test
+
+variables:
+    BUILD_FILE_NAME: laptop.txt
+
+build laptop:
+    image: alpine
+    stage: build
+    script:
+        - echo "Building a laptop in the new DevOps group"
+        - mkdir build
+        - touch build/computer.txt
+        - echo "Mainboard" >> build/$BUILD_FILE_NAME
+        - cat build/$BUILD_FILE_NAME
+        - echo "Keyboard" >> build/$BUILD_FILE_NAME
+        - cat build/$BUILD_FILE_NAME
+    artifacts:
+        paths:
+            - build
+            
+test laptop:
+    image: alpine
+    stage: test
+    script:
+        - test -f build/$BUILD_FILE_NAME
+        - grep "Mainboard" build/$BUILD_FILE_NAME
+        - grep "Keyboard" build/$BUILD_FILE_NAME
