Update azure-pipelines.yml for Azure Pipelines
initial pipeline text changed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   vmImage: ubuntu-latest
   script:
-      - echo "Ajusting this pipeline with stages & jobs"
+      - echo "Ajusting this pipeline for the Java application"
 
 steps:
 - task: Maven@3
