--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,10 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+      echo 'Hello world from the task assistant'
