Update azure-pipelines.yml for Azure Pipelines
adding strategy/matrix block

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,20 @@
 trigger:
 - main
 
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-latest"
+    mac:
+      imageName: "macOS-latest"
+    windows:
+      imageName: "windows-latest"
+  maxParallel: 3
+
 pool:
-  vmImage: ubuntu:20.04
+  vmImage: $(imageName)
   script:
-      - echo "Ajusting this pipeline for the Java application"
+      - echo "Building and testing project on Linux, Mac, Windows"
 
 steps:
 - task: Maven@3
